platiagro/datasets/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: datasets
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /datasets/apis/
    rewrite:
      uri: /
    route:
    - destination:
        host: $(platiagro-datasets-service).$(platiagro-datasets-namespace).svc.cluster.local
        port:
          number: 8080
    timeout: 300s
